<resources>
    <string name="app_name">Nmedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_share">Post share</string>
    <string name="count_likes" translatable="false">32</string>
    <string name="count_share" translatable="false">50</string>
    <string name="count_viewed" translatable="false">500</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'n be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edited">Edit Message</string>
    <string name="description_cancel_edit">Canceling an edit</string>
    <string name="description_save_post">Save post</string>
    <string name="chooser_share_post">Share</string>
    <string name="add_post">Add post</string>
    <string name="video_image">video</string>
</resources>